--- a/OTLWizard/OTLWizard.csproj
+++ b/OTLWizard/OTLWizard.csproj
@@ -61,6 +61,15 @@
     <Reference Include="Microsoft.Bcl.HashCode, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.HashCode.1.0.0\lib\net461\Microsoft.Bcl.HashCode.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Msagl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=640c57aa40e7ae7d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.1.1.3\lib\net40\Microsoft.Msagl.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.Drawing, Version=3.0.0.0, Culture=neutral, PublicKeyToken=8a3d7c21d5fa1306, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.Drawing.1.1.3\lib\net40\Microsoft.Msagl.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.GraphViewerGdi, Version=3.0.0.0, Culture=neutral, PublicKeyToken=fffc27ea4058b3a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Msagl.GraphViewerGDI.1.1.3\lib\net40\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <HintPath>..\packages\Office.Interop.Excel.12.0.0\lib\net40\Microsoft.Office.Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -188,6 +197,18 @@
     <Compile Include="FrontEnd\SettingsWindow.Designer.cs">
       <DependentUpon>SettingsWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrontEnd\SubsetViewerImportWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\SubsetViewerImportWindow.Designer.cs">
+      <DependentUpon>SubsetViewerImportWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrontEnd\SubsetViewerWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\SubsetViewerWindow.Designer.cs">
+      <DependentUpon>SubsetViewerWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrontEnd\TutorialWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -238,6 +259,7 @@
     <Compile Include="Helpers\SerializableDictionary.cs" />
     <Compile Include="OTLObjecten\OTL_ArtefactType.cs" />
     <Compile Include="OTLObjecten\OTL_ConnectingEntityHandle.cs" />
+    <Compile Include="OTLObjecten\OTL_DataContainer.cs" />
     <Compile Include="OTLObjecten\OTL_Entity.cs" />
     <Compile Include="OTLObjecten\OTL_ObjectType.cs" />
     <Compile Include="OTLObjecten\OTL_Parameter.cs" />
@@ -249,6 +271,9 @@
     <Compile Include="OTLObjecten\OTL_UserDataContainer.cs" />
     <Compile Include="Helpers\Versioning.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Data\wizard.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="FrontEnd\ArtefactResultWindow.resx">
       <DependentUpon>ArtefactResultWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -281,6 +306,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\ExportSubsetWindow.resx">
       <DependentUpon>ExportSubsetWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrontEnd\SubsetViewerImportWindow.resx">
+      <DependentUpon>SubsetViewerImportWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrontEnd\SubsetViewerWindow.resx">
+      <DependentUpon>SubsetViewerWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\TutorialWindow.resx">
       <DependentUpon>TutorialWindow.cs</DependentUpon>
