--- a/OTLWizard/packages.config
+++ b/OTLWizard/packages.config
@@ -5,6 +5,9 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
+  <package id="Microsoft.Msagl" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Msagl.Drawing" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Msagl.GraphViewerGDI" version="1.1.3" targetFramework="net472" />
   <package id="NShape.Core" version="2.4.1" targetFramework="net472" />
   <package id="NShape.Shapes.General" version="2.4.1" targetFramework="net472" />
   <package id="NShape.WinFormsUI" version="2.4.1" targetFramework="net472" />
