--- a/OTLWizard/packages.config
+++ b/OTLWizard/packages.config
@@ -14,6 +14,8 @@
   <package id="NShape.WinFormsUI" version="2.4.1" targetFramework="net472" />
   <package id="Office" version="12.0.0" targetFramework="net472" />
   <package id="Office.Interop.Excel" version="12.0.0" targetFramework="net472" />
+  <package id="Panelak.Drawing" version="6.0.0" targetFramework="net472" />
+  <package id="Panelak.Geometry" version="6.0.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="18.3.0.53" targetFramework="net472" />
   <package id="Syncfusion.Shared.WPF" version="18.3.0.53" targetFramework="net472" />
@@ -22,6 +24,7 @@
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
