--- a/OTLWizard/packages.config
+++ b/OTLWizard/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="110.0.30" targetFramework="net472" />
+  <package id="cef.redist.x86" version="110.0.30" targetFramework="net472" />
+  <package id="CefSharp.Common" version="110.0.300" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="110.0.300" targetFramework="net472" />
   <package id="CsvHelper" version="27.2.1" targetFramework="net472" />
+  <package id="DotSpatial.Projections" version="2.0.1.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="FSharp.Core" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
@@ -14,8 +20,11 @@
   <package id="NShape.WinFormsUI" version="2.4.1" targetFramework="net472" />
   <package id="Office" version="12.0.0" targetFramework="net472" />
   <package id="Office.Interop.Excel" version="12.0.0" targetFramework="net472" />
-  <package id="Panelak.Drawing" version="6.0.0" targetFramework="net472" />
-  <package id="Panelak.Geometry" version="6.0.1" targetFramework="net472" />
+  <package id="Programmerare.CrsTransformations.Adapter.DotSpatial" version="3.0.0" targetFramework="net472" />
+  <package id="Programmerare.CrsTransformations.Adapter.ProjNet" version="3.0.0" targetFramework="net472" />
+  <package id="Programmerare.CrsTransformations.Constants" version="10.36.0" targetFramework="net472" />
+  <package id="Programmerare.CrsTransformations.Core" version="3.0.0" targetFramework="net472" />
+  <package id="ProjNET" version="2.0.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="18.3.0.53" targetFramework="net472" />
   <package id="Syncfusion.Shared.WPF" version="18.3.0.53" targetFramework="net472" />
@@ -26,8 +35,8 @@
   <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
