--- a/OTLWizard/packages.config
+++ b/OTLWizard/packages.config
@@ -5,15 +5,15 @@
   <package id="CefSharp.Common" version="111.2.20" targetFramework="net472" />
   <package id="CefSharp.WinForms" version="111.2.20" targetFramework="net472" />
   <package id="CsvHelper" version="27.2.1" targetFramework="net472" />
-  <package id="DotSpatial.Projections" version="2.0.1.2" targetFramework="net472" />
+  <package id="DotSpatial.Projections" version="4.0.656" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="FSharp.Core" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net472" />
-  <package id="Microsoft.Msagl" version="1.1.3" targetFramework="net472" />
-  <package id="Microsoft.Msagl.Drawing" version="1.1.3" targetFramework="net472" />
-  <package id="Microsoft.Msagl.GraphViewerGDI" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Msagl" version="1.1.6" targetFramework="net472" />
+  <package id="Microsoft.Msagl.Drawing" version="1.1.6" targetFramework="net472" />
+  <package id="Microsoft.Msagl.GraphViewerGDI" version="1.1.7" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="Office" version="12.0.0" targetFramework="net472" />
   <package id="Office.Interop.Excel" version="12.0.0" targetFramework="net472" />
@@ -25,16 +25,17 @@
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="18.3.0.53" targetFramework="net472" />
   <package id="Syncfusion.Shared.WPF" version="18.3.0.53" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.5.1" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Resources.Extensions" version="7.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
